# MontyHall

./: .gitignore  LICENSE  Makefile  MontyHall.cs  MontyHall.csproj  MontyHall.sln  MontyHallGame.cs  MontyHallStatistics.cs  Program.cs  README.md  README.md.backup  config.json  data_analysis.py  main.py  montyhall.xlsx  pyproject.toml  repeat.sh  resultados.csv  resultados.txt  resultadosFalse.csv
Data/: DataContext.cs  GameRepository.cs  IGameRepository.cs  Model.cs  MontyHallResult.cs
config/: settings.py
data/: database.py  resultados.md  resultados.txt
data/100_000/: monty-hall-100_000.xlsx  resultados-False-100000-1.csv  resultados-False-100000-2.csv  resultados-False-100000-3.csv  resultados-True-100000-1.csv  resultados-True-100000-2.csv  resultados-True-100000-3.csv  resultados.txt
data/10_000/: resultados-False-10000-2.csv  resultados-False-10000-3.csv  resultados-True-10000-1.csv  resultados-True-10000-2.csv  resultados-True-10000-3.csv  resultados.txt
data/1_000/: monty-hall-1000.xlsx  resultados-False-1000-1.csv  resultados-False-1000-2.csv  resultados-False-1000-3.csv  resultados-True-1000-1.csv  resultados-True-1000-2.csv  resultados-True-1000-3.csv  resultados.txt
data/dados_experimento/: resultados-False-100000-1.csv  resultados-False-100000-10.csv  resultados-False-100000-2.csv  resultados-False-100000-3.csv  resultados-False-100000-4.csv  (+15 more)
models/: game.py
montyhall/: data_analysis.py  database.py  main.py  montyhall.py  montyhallgame.py  settings.py
src/: database.c  database.h  main.c
utils/: data_analysis.py
(+3 files in other folders)
