[tool.poetry]
name = "montyhall"
version = "0.1.0"
description = ""
authors = ["Daniel Aspect", "Daniel Lima"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
